--- a/contact.html
+++ b/contact.html
@@ -2,14 +2,23 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Contact me</title>
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
-    <h3>Contact me</h3>
-    <p>Email me at: nikki6030@msn.com</p>
-    <form class="" action="index.html" method="post">
-      <label>Your Name:</label>
-      <input type="submit" name="">
+  <h1>My Contact Details</h1>
+  <p>My Fictional Address</p>
+  <p>303-555-0000</p>
+  <p>myemail@gmail.com</p>
+  <hr>
+    <form action="mailto:info@nikki6030@msn.com" method="post" enctype="text/plain">
+      <label>Your Name: </label>
+      <input type="text" name="yourName" value=""><br>
+      <label>Your Email: </label>
+      <input type="email" name="yourEmail" value=""><br>
+      <label>Your Message: </label><br>
+      <textarea name="yourMessage" rows="10" cols="30"></textarea><br>
+      <input type="Submit" name="">
     </form>
   </body>
 </html>
