--- a/hobbies.html
+++ b/hobbies.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>My Hobbies</title>
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <h3>My Hobbies</h3>
@@ -12,6 +13,5 @@
     <li>Programming</li>
     <li>Sewing</li>
   </ol>
-<a download href="https://web.stanford.edu/group/csp/cs21/htmlcheatsheet.pdf">Download Cheatsheet</a><br>
   </body>
 </html>
