--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Arlene's Personal Site</title>
+  <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -30,7 +31,7 @@
   <hr>
   <h3>Work Experience</h3>
 
-<table border="1">
+<table>
     <thead>
       <tr>
         <th>Dates</th>
@@ -40,40 +41,51 @@
     <tbody>
       <tr>
         <td>2014-2016</td>
-        <td>Coordinator at UMDAA</td>
+        <td>Membership Coordinator and Trainer at UMDAA</td>
       </tr>
       <tr>
-          <td>2016-2019</td>
-          <td>Manager at UMDAA</td>
+          <td>2016-2017</td>
+          <td>Membership Experience Manager and Trainer at UMDAA</td>
+      </tr>
+      <tr>
+          <td>2017-2019</td>
+          <td>Membership Operations Manager and Trainer at UMDAA</td>
+      </tr>
+
+      <tr>
+          <td>2019-Present</td>
+          <td>Instructional Designer and Trainer at DMI</td>
       </tr>
     </tbody>
   </table>
   <hr>
-<h3>Skills</h3>
 <table>
+  <h4>Learning and Development Skills</h4>
   <tr>
-    <td> Instructional Developer</td>
+    <td> Instructional Development</td>
     <td>⭐⭐⭐⭐⭐</td>
   </tr>
   <tr>
-    <td> Instructional Designer</td>
+    <td> Instructional Design</td>
     <td>⭐⭐⭐⭐⭐</td>
   </tr>
+
   <tr>
-    <td> L&D Professional</td>
-    <td>⭐⭐⭐⭐⭐</td>
+    <td> Training Facilitation</td>
+    <td>⭐⭐⭐⭐</td>
   </tr>
 </table>
 <hr>
 
 <table>
+  <h4>Project Management Skills</h4>
   <tr>
     <td>Project Manager</td>
     <td>⭐⭐⭐⭐⭐</td>
   </tr>
 </table>
-
-<a href="hobbies.html">My Hobbies</a>
+<hr>
+<a href="hobbies.html">My Hobbies</a> <br> <br>
 <a href="contact.html">Contact Me</a>
 </body>
 
